RESOLVED FIXED138334
fast/dom/remove-body-during-body-replacement2.html fails on WK2
https://bugs.webkit.org/show_bug.cgi?id=138334
Summary fast/dom/remove-body-during-body-replacement2.html fails on WK2
Alexey Proskuryakov
Reported 2014-11-03 16:29:41 PST
fast/dom/remove-body-during-body-replacement2.html fails when run as part of regression tests. We usually don;t notice, because it passes on retry. Looks like there is some dependency on earlier tests: run-webkit-tests -2 --no-retry --child-processes=1 fast/dom/html-link-element-activation-behavior-on-mouse-click.html fast/dom/remove-body-during-body-replacement2.html
Attachments
test (4.86 KB, text/html)
2014-11-04 17:22 PST, Ryosuke Niwa
no flags
proposed fix (4.31 KB, patch)
2014-11-05 11:03 PST, Alexey Proskuryakov
andersca: review+
Alexey Proskuryakov
Comment 1 2014-11-03 16:29:58 PST
When the test fails, we don't get a DOMFocusOut event.
Ryosuke Niwa
Comment 2 2014-11-04 17:22:56 PST
Created attachment 240987 [details] test Interestingly, Firefox doesn't restore the focus back to the main frame either upon reloading the same test page I created. On Firefox, after focusing the frame, the frame gets removed by the script on 3s timer, and then the page navigates to webkit.org, the keydown doesn't scroll the page until I manually click the main document.
Alexey Proskuryakov
Comment 3 2014-11-05 11:03:56 PST
Created attachment 241042 [details] proposed fix
Alexey Proskuryakov
Comment 4 2014-11-05 13:21:51 PST
Note You need to log in before you can comment on or make changes to this bug.