Source/WebKit2/WebProcess/InjectedBundle/API/c/WKBundleFrame.cpp
@@ -35,9 +35,11 @@
 #include "WebFrame.h"
 #include "WebSecurityOrigin.h"
 #include <WebCore/Document.h>
+#include <WebCore/FocusController.h>
 #include <WebCore/Frame.h>
 #include <WebCore/FrameLoader.h>
 #include <WebCore/FrameView.h>
+#include <WebCore/Page.h>
 
 using namespace WebCore;
 using namespace WebKit;
@@ -269,4 +271,13 @@ WKSecurityOriginRef WKBundleFrameCopySecurityOrigin(WKBundleFrameRef frameRef)
         return 0;
 
     return toCopiedAPI(coreFrame->document()->securityOrigin());
+}
+
+void WKBundleFrameFocus(WKBundleFrameRef frameRef)
+{
+    Frame* coreFrame = toImpl(frameRef)->coreFrame();
+    if (!coreFrame)
+        return;
+
+    coreFrame->page()->focusController().setFocusedFrame(coreFrame);
 }
